I think I'm fixing the spacing issue?

--- a/css/components/viewport.css
+++ b/css/components/viewport.css
@@ -1,5 +1,5 @@
 [data-component~="viewport"] {
-    --top-nav-height: calc(var(--sat) + 80px);
+    --top-nav-height: 80px;
     background: white;
     padding: 15px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
